# arc_registration

./: CMakeLists.txt  capturing.md  frames.md  package.xml  rviz_plugin.xml
include/arc_registration/: arc_registration_node.h  grasp_editor.h  grasp_editor.ui  object_grasp.h  objects.h  utils.hpp
launch/: register_map.launch  registration.launch  registration.rviz
resource/: icons.qrc
scripts/: normalize_data.sh
src/: align_tfs_views.cpp  arc_registration_node.cpp  grasp_editor.cpp  object_grasp.cpp  register_views.cpp
srv/: Registration.srv
